checkout page added + linked to shop page

--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -3,7 +3,9 @@
     <div class="row">
       <div class="col">
         <p>
-          <i class="fa fa-shopping-cart fa-2x"></i>
+          <a (click)="onCheckOut()" style="cursor: pointer"
+            ><i class="fa fa-shopping-cart fa-2x"></i
+          ></a>
           <span *ngIf="cartArray.length > 0"> x {{ cartArray.length }}</span>
         </p>
       </div>
