--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -1,1 +1,7 @@
-<p>checkout works!</p>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col"><p>Checkout here</p></div>
+    </div>
+  </div>
+</section>
