content added to faq section

--- a/src/app/faq/faq-info/faq-info.component.html
+++ b/src/app/faq/faq-info/faq-info.component.html
@@ -1,7 +1,42 @@
 <section class="faq-info">
   <div class="container">
     <div class="row">
-      <div class="col"></div>
+      <div class="col-md-8">
+        <div class="py-5">
+          <h2>Covid Information</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+            cupiditate rerum vel obcaecati omnis maiores alias, repudiandae
+            quisquam laboriosam totam!
+          </p>
+          <ul>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem, ipsum dolor.</li>
+          </ul>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere
+            aspernatur neque consequuntur perferendis, repudiandae dolorem,
+            distinctio tempore voluptate ratione animi id, sequi ullam hic.
+            Assumenda omnis quaerat facere expedita veritatis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae quis
+            quas cum, iure pariatur ea!
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4 my-auto pb-5">
+        <div>
+          <img
+            src="../../../assets/images/teacher2.png"
+            alt=""
+            class="img-fluid"
+          />
+        </div>
+      </div>
     </div>
   </div>
 </section>
