--- a/src/app/faq/questions/questions.component.html
+++ b/src/app/faq/questions/questions.component.html
@@ -1,16 +1,16 @@
 <section class="questions">
   <div class="container py-5">
     <div class="row py-5">
-      <div class="col-md-3">
+      <div class="col-md-4 my-auto">
         <div>
           <img
-            src="../../../assets/images/question.jpg"
+            src="../../../assets/images/contact-us.jpg"
             alt=""
             class="img-fluid"
           />
         </div>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-8">
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
@@ -22,7 +22,7 @@
                 aria-expanded="true"
                 aria-controls="collapseOne"
               >
-                Accordion Item #1
+                FAQ Question #1
               </button>
             </h2>
             <div
@@ -33,15 +33,13 @@
             >
               <div class="accordion-body">
                 <p>
-                  <strong>This is the first item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+                  corporis provident voluptates quia, laborum quisquam quaerat
+                  soluta iure explicabo iste inventore, ducimus nisi ipsum sed
+                  accusamus quam atque magnam aspernatur doloribus fuga neque
+                  tempore, fugiat quo! Iusto necessitatibus et eligendi amet
+                  magni doloribus tempora odit architecto, totam obcaecati eius
+                  magnam itaque dolor repudiandae, officia tenetur!
                 </p>
               </div>
             </div>
@@ -56,7 +54,7 @@
                 aria-expanded="false"
                 aria-controls="collapseTwo"
               >
-                Accordion Item #2
+                FAQ Question #2
               </button>
             </h2>
             <div
@@ -67,15 +65,14 @@
             >
               <div class="accordion-body">
                 <p>
-                  <strong>This is the second item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Reiciendis beatae velit, temporibus officiis sunt adipisci
+                  quas, ullam inventore quae architecto doloribus animi dicta
+                  dolorem iure magnam aliquam placeat dolorum, eius est ipsum
+                  nulla natus illum sed corrupti. Nulla culpa enim similique
+                  eveniet vel maxime reiciendis suscipit voluptate ad id
+                  obcaecati harum aliquid veritatis doloremque, beatae, nobis
+                  eaque vero ea quaerat!
                 </p>
               </div>
             </div>
@@ -90,7 +87,7 @@
                 aria-expanded="false"
                 aria-controls="collapseThree"
               >
-                Accordion Item #3
+                FAQ Question #3
               </button>
             </h2>
             <div
@@ -101,15 +98,13 @@
             >
               <div class="accordion-body">
                 <p>
-                  <strong>This is the third item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Doloribus veniam quis porro, magni alias minus. Nisi, nostrum?
+                  Pariatur, dicta quas. Ab magnam optio quo consectetur, aperiam
+                  aspernatur error mollitia, excepturi sed expedita officia.
+                  Ipsam voluptas explicabo itaque officia doloribus nemo rem!
+                  Perferendis inventore recusandae sit doloribus, praesentium
+                  temporibus suscipit officiis?
                 </p>
               </div>
             </div>
