restyled pages/spacing+media query for diff screen

--- a/src/app/about-us/advice/advice.component.html
+++ b/src/app/about-us/advice/advice.component.html
@@ -1,6 +1,6 @@
 <section>
-  <div class="container advice">
-    <div class="row">
+  <div class="container advice py-5">
+    <div class="row py-5">
       <div class="col">
         <div class="advice_text">
           <h3 class="pb-3">
