--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -15,9 +15,11 @@
           vitae aliquid laborum culpa esse quam iure nostrum exercitationem,
           dolorum natus nihil quisquam.
         </p>
-        <button class="btn btn-blue my-5" (click)="onToShop()">
-          More First Aid Products
-        </button>
+        <div class="button-container">
+          <button class="btn btn-blue my-5" (click)="onToShop()">
+            More First Aid Products
+          </button>
+        </div>
       </div>
       <div class="col-md-6 my-auto">
         <div class="">
