--- a/src/app/contact/contact-form/contact-form.component.scss
+++ b/src/app/contact/contact-form/contact-form.component.scss
@@ -68,11 +68,19 @@ form {
   }
 }
 
+@media only screen and(max-width:768px) {
+  form {
+    width: 80%;
+    margin: 4rem auto;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .button-container {
     text-align: center;
   }
   form {
+    width: 100%;
     margin: 4rem 0rem;
   }
 }
