--- a/src/app/home/shop/shop.component.scss
+++ b/src/app/home/shop/shop.component.scss
@@ -14,3 +14,9 @@ section {
     display: none;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .button-container {
+    text-align: center;
+  }
+}
