--- a/src/app/home/testimonial/testimonial.component.scss
+++ b/src/app/home/testimonial/testimonial.component.scss
@@ -15,6 +15,10 @@ section {
   color: $color-white;
 
   background-image: linear-gradient(to right, $color-active, $color-blue);
+
+  & footer {
+    color: $color-white;
+  }
 }
 
 .blockquote-footer {
@@ -28,15 +32,11 @@ section {
 }
 
 .testimonial-static-text {
-  padding-left: 10rem;
+  color: $color-active;
 }
 
 @media only screen and (max-width: 768px) {
   .testimonial-static-text {
-    padding-left: 0;
+    padding: 0 auto;
   }
-}
-
-footer {
-  color: white;
 }
