alt text added to images

--- a/src/app/about-us/what-we-do/what-we-do.component.html
+++ b/src/app/about-us/what-we-do/what-we-do.component.html
@@ -22,7 +22,10 @@
       </div>
       <div class="col-md-6 my-auto">
         <div class="image-fluid">
-          <img src="../../../assets/images/teacher3.jpg" alt="" />
+          <img
+            src="../../../assets/images/teacher3.jpg"
+            alt="a teacher teaching a class"
+          />
         </div>
       </div>
     </div>
