--- a/src/app/faq/faq-contact/faq-contact.component.html
+++ b/src/app/faq/faq-contact/faq-contact.component.html
@@ -13,7 +13,10 @@
           </p>
           <div class="question-image">
             <button class="btn mt-5" (click)="onToContact()">
-              <img src="../../../assets/images/question-mark.png" alt="" />
+              <img
+                src="../../../assets/images/question-mark.png"
+                alt="a question mark"
+              />
               <p>Ask a question</p>
             </button>
           </div>
