--- a/src/app/faq/faq-info/faq-info.component.html
+++ b/src/app/faq/faq-info/faq-info.component.html
@@ -32,7 +32,7 @@
         <div>
           <img
             src="../../../assets/images/teacher2.png"
-            alt=""
+            alt="a teacher and student"
             class="img-fluid"
           />
         </div>
