--- a/src/app/faq/questions/questions.component.html
+++ b/src/app/faq/questions/questions.component.html
@@ -5,7 +5,7 @@
         <div>
           <img
             src="../../../assets/images/contact-us.jpg"
-            alt=""
+            alt="a person on a phone"
             class="img-fluid"
           />
         </div>
