--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -22,11 +22,11 @@
         </div>
       </div>
       <div class="col-md-6 my-auto">
-        <div class="">
+        <div>
           <img
             src="../../../assets/images/first-aid-kit3.png"
             class="img-fluid"
-            alt=""
+            alt="a open first aid kit"
           />
         </div>
       </div>
