--- a/src/app/courses/course-card/course-card.component.html
+++ b/src/app/courses/course-card/course-card.component.html
@@ -6,7 +6,11 @@
         *ngFor="let course of coursesArray; let i = index"
       >
         <div class="card mt-5" *ngIf="i < 8">
-          <img src="{{ course.image }}" class="card-img-top" alt="..." />
+          <img
+            src="{{ course.image }}"
+            class="card-img-top"
+            alt="{{ course.title }}"
+          />
           <div class="card-body">
             <h4 class="card-title mb-3">
               <a
