--- a/src/app/courses/course-info/course-info.component.html
+++ b/src/app/courses/course-info/course-info.component.html
@@ -3,7 +3,11 @@
     <div class="row">
       <div class="col-md-8 offset-md-2">
         <div class="card mt-3">
-          <img src="{{ displayCourse.image }}" class="card-img-top" alt="..." />
+          <img
+            src="{{ displayCourse.image }}"
+            class="card-img-top"
+            alt="{{ displayCourse.title }}"
+          />
           <div class="card-body">
             <h4 class="card-title">
               {{ displayCourse.title }}
