--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -3,7 +3,10 @@
     <div class="row">
       <div class="col-md-6 my-auto">
         <div class="img-fluid">
-          <img src="../../../assets/images/contact-us.jpg" alt="" />
+          <img
+            src="../../../assets/images/contact-us.jpg"
+            alt="a person on a phone"
+          />
         </div>
       </div>
       <div class="col-md-6">
