--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -28,7 +28,7 @@
               {{ product.description | wordCut }}
             </p>
             <p class="card-text">€ {{ product.cost }}</p>
-            <p class="cart-text">
+            <p class="cart-text-cart">
               &#10149;<a (click)="onAddToCart(i)" style="cursor: pointer"
                 >Add To Cart</a
               >
