--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -23,7 +23,7 @@
     color: $color-altOrange;
   }
 
-  .cart-text {
+  .cart-text-cart {
     color: $color-altOrange;
     transition: all 0.5s;
 
