change image path/clear cart when checkout complet

--- a/src/app/faq/faq-contact/faq-contact.component.html
+++ b/src/app/faq/faq-contact/faq-contact.component.html
@@ -14,7 +14,7 @@
           <div class="question-image">
             <button class="btn mt-5" (click)="onToContact()">
               <img
-                src="../../../assets/images/question-mark.png"
+                src="assets/images/question-mark.png"
                 alt="a question mark"
               />
               <p>Ask a question</p>
