--- a/src/app/faq/questions/questions.component.html
+++ b/src/app/faq/questions/questions.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-4 my-auto">
         <div>
           <img
-            src="../../../assets/images/contact-us.jpg"
+            src="assets/images/contact-us.jpg"
             alt="a person on a phone"
             class="img-fluid"
           />
