--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -3,17 +3,13 @@
     <div class="row pt-4">
       <div class="col-md-4 px-4 text-center">
         <h5>Contact Us</h5>
-        <!-- <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
-          mollitia sunt esse. Possimus, vero perferendis minus blanditiis
-          delectus quo ab?
-        </p> -->
+
         <p><i class="fa fa-location-arrow"></i> 123 Fake St. Dublin</p>
         <p><i class="fa fa-phone"></i> +353 01-15412</p>
         <p><i class="fa fa fa-envelope"></i> info@moreInfo.com</p>
       </div>
       <div class="col-md-4 text-center">
-        <img src="../../../assets/images/logo-white.png" alt="" class="py-4" />
+        <img src="assets/images/logo-white.png" alt="" class="py-4" />
       </div>
       <div class="col-md-4">
         <h5>Company</h5>
