--- a/src/app/about-us/what-we-do/what-we-do.component.html
+++ b/src/app/about-us/what-we-do/what-we-do.component.html
@@ -23,7 +23,7 @@
       <div class="col-md-6 my-auto">
         <div class="image-fluid">
           <img
-            src="../../../assets/images/teacher3.jpg"
+            src="assets/images/teacher3.jpg"
             alt="a teacher teaching a class"
           />
         </div>
