--- a/src/app/about-us/who-we-are/who-we-are.component.html
+++ b/src/app/about-us/who-we-are/who-we-are.component.html
@@ -3,10 +3,7 @@
     <div class="row py-5">
       <div class="col-md-6 my-auto">
         <div class="image-fluid text-center">
-          <img
-            src="../../../assets/images/people2.jpg"
-            alt=" a group of people"
-          />
+          <img src="assets/images/people2.jpg" alt=" a group of people" />
         </div>
       </div>
       <div class="col-md-6 my-auto">
