--- a/src/app/faq/faq-info/faq-info.component.html
+++ b/src/app/faq/faq-info/faq-info.component.html
@@ -31,7 +31,7 @@
       <div class="col-md-4 my-auto pb-5">
         <div>
           <img
-            src="../../../assets/images/teacher2.png"
+            src="assets/images/teacher2.png"
             alt="a teacher and student"
             class="img-fluid"
           />
