--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -27,10 +27,7 @@
       </div>
       <div class="col-md-6 about_image my-auto">
         <div class="img-fluid text-right">
-          <img
-            src="../../../assets/images/first-aid-kit2.jpg"
-            alt="a first aid kit"
-          />
+          <img src="assets/images/first-aid-kit2.jpg" alt="a first aid kit" />
         </div>
       </div>
     </div>
