--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -24,7 +24,7 @@
       <div class="col-md-6 my-auto">
         <div>
           <img
-            src="../../../assets/images/first-aid-kit3.png"
+            src="assets/images/first-aid-kit3.png"
             class="img-fluid"
             alt="a open first aid kit"
           />
