--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg py-5">
   <div class="container-fluid">
     <img
-      src="../../../assets/images/logo-white.png"
+      src="assets/images/logo-white.png"
       alt="white-crown"
       class="img-fluid"
     />
