changed text color to darker blue/update readme

--- a/src/app/courses/course-book/course-book.component.html
+++ b/src/app/courses/course-book/course-book.component.html
@@ -2,7 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 py-5">
-        <form [formGroup]="bookingForm" (ngSubmit)="onSubmit()">
+        <form
+          [formGroup]="bookingForm"
+          (ngSubmit)="onSubmit()"
+          autocomplete="off"
+        >
           <div class="form-group mb-3">
             <label for="course">Course</label>
             <input
