--- a/src/app/courses/course-book/course-book.component.html
+++ b/src/app/courses/course-book/course-book.component.html
@@ -109,7 +109,7 @@
                   bookingForm.get('userData.phone').touched
                 "
               >
-                Please enter a valid phone number.
+                Please enter a valid 10 digit phone number.
               </div>
             </div>
           </div>
