--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -61,7 +61,7 @@
                 checkOutForm.get('phone').touched
               "
             >
-              Please enter a phone number.
+              Please enter a valid 10 digit phone number.
             </div>
             <label for="phone" class="form-label">Phone Number</label>
           </div>
