improve mobile layout/text improvement/shop button

--- a/src/app/faq/faq-info/faq-info.component.html
+++ b/src/app/faq/faq-info/faq-info.component.html
@@ -1,8 +1,8 @@
 <section class="faq-info">
   <div class="container">
-    <div class="row">
-      <div class="col-md-8">
-        <div class="py-5">
+    <div class="row py-5">
+      <div class="col-lg-8 col-md-6">
+        <div>
           <h2>Covid Information</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
@@ -16,7 +16,7 @@
             <li>Lorem, ipsum dolor.</li>
             <li>Lorem, ipsum dolor.</li>
           </ul>
-          <p>
+          <p class="cov-info">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere
             aspernatur neque consequuntur perferendis, repudiandae dolorem,
             distinctio tempore voluptate ratione animi id, sequi ullam hic.
@@ -28,7 +28,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-4 my-auto pb-5">
+      <div class="col-lg-4 col-md-6 my-auto">
         <div>
           <img
             src="assets/images/teacher2.png"
