--- a/src/app/faq/questions/questions.component.html
+++ b/src/app/faq/questions/questions.component.html
@@ -1,7 +1,7 @@
 <section class="questions">
   <div class="container py-5">
     <div class="row py-5">
-      <div class="col-md-4 my-auto">
+      <div class="col-lg-4 col-md-6 my-auto">
         <div>
           <img
             src="assets/images/contact-us.jpg"
@@ -10,7 +10,7 @@
           />
         </div>
       </div>
-      <div class="col-md-8">
+      <div class="col-lg-8 col-md-6">
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
@@ -22,7 +22,7 @@
                 aria-expanded="true"
                 aria-controls="collapseOne"
               >
-                FAQ Question #1
+                FAQ Question 1
               </button>
             </h2>
             <div
@@ -54,7 +54,7 @@
                 aria-expanded="false"
                 aria-controls="collapseTwo"
               >
-                FAQ Question #2
+                FAQ Question 2
               </button>
             </h2>
             <div
@@ -87,7 +87,7 @@
                 aria-expanded="false"
                 aria-controls="collapseThree"
               >
-                FAQ Question #3
+                FAQ Question 3
               </button>
             </h2>
             <div
