--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -17,7 +17,7 @@
         </p>
         <div class="button-container">
           <button class="btn btn-blue my-5" (click)="onToShop()">
-            More First Aid Products
+            First Aid Products
           </button>
         </div>
       </div>
