--- a/src/app/about-us/what-we-do/what-we-do.component.scss
+++ b/src/app/about-us/what-we-do/what-we-do.component.scss
@@ -18,3 +18,9 @@ section {
     color: $color-white;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .row {
+    flex-flow: column-reverse;
+  }
+}
