--- a/src/app/home/courses/courses.component.html
+++ b/src/app/home/courses/courses.component.html
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="col text-center">
         <button class="btn btn-blue my-5" (click)="onToCourses()">
-          More First Aid Courses
+          First Aid Courses
         </button>
       </div>
     </div>
