--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -3,11 +3,14 @@
     <div class="row">
       <div class="col">
         <p>
-          <a (click)="onCheckOut()" style="cursor: pointer"
-            ><i class="fa fa-shopping-cart fa-2x"></i
-          ></a>
-
-          <span *ngIf="cartArray.length > 0"> x {{ cartArray.length }}</span>
+          <a (click)="onCheckOut()" style="cursor: pointer">
+            <button class="btn btn-blue">
+              <i class="fa fa-shopping-cart fa-2x"></i>
+              <span *ngIf="cartArray.length > 0">
+                x {{ cartArray.length }}</span
+              >
+            </button>
+          </a>
         </p>
       </div>
     </div>
