--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -7,7 +7,6 @@
   border: none;
   border: 1px solid $color-blue;
   background-color: $color-paleBlue;
-  //color: $color-white;
 
   &-img-top {
     width: 100%;
@@ -34,4 +33,8 @@
 }
 i.fa {
   color: $color-altOrange;
+}
+
+button {
+  width: 100%;
 }
