--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -18,3 +18,25 @@
     transform: translateY(-1px) scale(0.98);
   }
 }
+
+.btn-altBlue {
+  //background-color: $color-blue;
+  background-image: radial-gradient($color-blue, $color-active);
+  color: $color-white;
+  border-radius: 1rem;
+  transition: all 0.2s;
+  font-size: 1.8rem;
+  //border: 2px solid $color-active;
+
+  // &:hover {
+  //   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+  //     0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  //   transform: translateY(-3px);
+  // }
+
+  // &:active {
+  //   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+  //     0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  //   transform: translateY(-1px) scale(0.98);
+  // }
+}
